# EDMCIgnoreMouse

./: CMakeLists.txt  main.c
.github/workflows/: ci.yml
src/: load.py  main.c
